syntax = "proto3";
package protos;
import "base.proto";

//创建房间请求
message C_CREATE_ROOM{
    RoomTypePt room_type = 1;//房间类型
}

//房间设置
message C_ROOM_SETTING{
    RoomSettingPt setting = 1;//房间设置
}

//离开房间
message C_LEAVE_ROOM{

}

//T人
message C_KICK_MEMBER{
    uint32 target_id = 1;//要T掉的玩家目标id
}

//换队伍
message C_CHANGE_TEAM{
    uint32 target_team_id = 1;//想要换的队伍目标id
}

//准备与取消准备
message C_PREPARE_CANCEL{
    bool prepare = 1;//true代表准备，false代表取消准备
}

//开始游戏
message C_START{

}

//开始游戏返回
message S_START{
    bool is_succ = 1;//是否成功;
    string err_mess = 2;//错误信息;
}

//快速开始
message C_SEARCH_ROOM{
    BattleTypePt battle_type = 1;//要搜索的战斗模式
}

//加入房间
message C_JOIN_ROOM{
    RoomTypePt room_type = 1;//房间类型
    uint32 room_id = 2;//房间id
}

//房间推送消息
message S_ROOM_NOTICE{

}

message S_ROOM{
    bool is_succ = 1;//是否成功;
    string err_mess = 2;//错误信息;
    RoomPt room = 3;//房间数据
}

